tests/should_fail/const_default.coma
module M_const_default__nat [#"const_default.rs" 10 0 10 20]
  let%span sconst_default = "const_default.rs" 12 20 12 38
  
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  constant const_VALUE [#"const_default.rs" 7 4 7 22]  : UInt64.t
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec nat[#"const_default.rs" 10 0 10 20] (return'  (x:()))= (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] [%#sconst_default] const_VALUE = (0: UInt64.t)} s1 | s1 = return''0 {_0} ]  ]
     [ & _0: () = Any.any_l () ] ) [ return''0 (result:())-> (! return' {result}) ] 
end
